force-app/main/default/objects/TPM_Sales_Summary__c/TPM_Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Sales Summary</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sales Summary #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>