force-app/main/default/objects/TPM_Sales_Summary__c/fields/Avg_Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_Customer_Rating__c</fullName>
    <defaultValue>4.0</defaultValue>
    <label>Avg Customer Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>