force-app/main/default/objects/TPM_Sales_Summary__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Outlet</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Summary</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>