force-app/main/default/objects/TPM_Sales_Summary__c/fields/Incentive_Value__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Value__c</fullName>
    <label>Incentive Earned</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>