force-app/main/default/objects/TPM_Sales_Summary__c/fields/Predicted_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Incentive__c</fullName>
    <label>Predicted Incentive</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>