force-app/main/default/objects/TPM_Sales_Summary__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
                <default>true</default>
                <label>Premium</label>
            </value>
            <value>
                <fullName>Popular</fullName>
            </value>
            <value>
                <fullName>Prestige</fullName>
            </value>
            <value>
                <fullName>Luxuary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>