force-app/main/default/objects/TPM_Sales_Summary__c/listViews/All_Sales_Summary.listView-meta.xml
<ListView>
    <fullName>All_Sales_Summary</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>